# weather-forecast

./: Cargo.toml  README.md
src/: main.rs  utils.rs
src/models/: city.rs  mod.rs  open_weather_api.rs
src/services/: mod.rs  open_weather_api.rs
