[package]
name = "weather-forecast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4.0"
serde_json = "1.0"
hyper-tls = "0.5.0"
serde = { version = "1.0.137", features = ["derive"] }
tracing = "0.1.29"